# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.620 2006/05/15 13:59:32 wolf31o2 Exp $

  15 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/livecd_stage1_target.py:
  Use the full category/package name for livecd-tools.

  13 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Make copies and deletes recursive for firmware sicne some packages put their
  firmware in a subdirectory.

  10 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix detection of the Installer.

  10 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc64.py:
  Added 970, power3, power4, and power5 sub-arches for ppc64.

  09 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Removed portion of livecdfs-update.sh that created /etc/conf.d/net as it is
  no longer necessary and can cause possible problems with Installer-based
  installs.

  08 May 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_lock.py:
  recursive directory create

  01 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Changed a display error from bug #131502 and rolling 2.0_rc45.

  25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Added patch from Gustavo Zacharias <gustavoz@gentoo.org> for some fun
  silo-fu on SPARC.

  25 Apr 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  digests function uses raw output from hash function now

  25 Apr 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py:
  change hash result format so .DIGESTS is generated correctly

  25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_support.py:
  Added patch to parse_spec by Andrew Gaffney <agaffney@gentoo.org> and for
  bug #131190.

  25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>