@@ -1,5 +1,8 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.620 2006/05/15 13:59:32 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.621 2006/05/15 19:09:28 rocket Exp $
+
+  15 May 2006; Eric Edgar <rocket@gentoo.org> arch/ppc64.py:
+  Fix ppc64 based arches to subclass ppc64
 
   15 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/livecd_stage1_target.py:
